added package json file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form action="/profile" method="post">
-        <label for="name">name</label>
+        <label for="name">username</label>
         <input type="text" name="name" id="name">
         <button type="submit">submit</button>
     </form>
